full stack app for cricket career

--- a/view.html
+++ b/view.html
@@ -39,9 +39,9 @@
     <br><hr><br>
     <h1>Search Player</h1>
     <input type="text" id="searchData" placeholder="Search A Player">
-    <button onclick="Search()">Search</button>
+    <button onclick="search()">Search</button>
 
-    <div class="profile" ></div>
+    <div id="profile" ></div>
     
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
